<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.pisces</groupId>
  <artifactId>parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>pisces parent</name>
  <url>http://maven.apache.org</url>
  
  <parent>
  	<groupId>org.springframework.boot</groupId>
  	<artifactId>spring-boot-starter-parent</artifactId>
  	<version>2.0.0.RELEASE</version>
  	<!-- <relativePath/> --> <!-- lookup parent from repository -->
  </parent>
  
  <properties>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  	<java.version>1.8</java.version>
  	<java.source.version>1.8</java.source.version>
  	<java.target.version>1.8</java.target.version>
  	
  	<commons-io.version>2.6</commons-io.version>
  	
  	<persistence.version>1.0</persistence.version>
  	<alibaba.druid.version>1.1.9</alibaba.druid.version>
  	<mybatis.spring.boot.version>1.2.2</mybatis.spring.boot.version>
  	<tk.mybatis.spring.boot.version>2.0.3</tk.mybatis.spring.boot.version>
  	<pagehelper-spring-boot-starter.version>1.2.7</pagehelper-spring-boot-starter.version>
  	
  	<retrofit.version>2.3.0</retrofit.version>
  	
  	<java-jwt.version>3.2.0</java-jwt.version>
  	<jjwt.version>0.7.0</jjwt.version>
  </properties>
  
  <dependencyManagement>
	  <dependencies>
	  	<dependency>
	  		<groupId>org.mybatis.spring.boot</groupId>
	  		<artifactId>mybatis-spring-boot-starter</artifactId>
	  		<version>${mybatis.spring.boot.version}</version>
	  	</dependency>
	  	<dependency>
	  		<groupId>com.alibaba</groupId>
	  		<artifactId>druid-spring-boot-starter</artifactId>
	  		<version>${alibaba.druid.version}</version>
	  	</dependency>
	  	<dependency>
	  		<groupId>tk.mybatis</groupId>
	  		<artifactId>mapper-spring-boot-starter</artifactId>
	  		<version>${tk.mybatis.spring.boot.version}</version>
	  	</dependency>
	  	<dependency>
    		<groupId>com.github.pagehelper</groupId>
    		<artifactId>pagehelper-spring-boot-starter</artifactId>
    		<version>${pagehelper-spring-boot-starter.version}</version>
	  	</dependency>
	  	<dependency>
        	<groupId>com.squareup.retrofit2</groupId>
        	<artifactId>retrofit</artifactId>
        	<version>${retrofit.version}</version>
      	</dependency>
      	<dependency>
        	<groupId>com.auth0</groupId>
        	<artifactId>java-jwt</artifactId>
        	<version>${java-jwt.version}</version>
      	</dependency>
      	<dependency>
        	<groupId>io.jsonwebtoken</groupId>
        	<artifactId>jjwt</artifactId>
        	<version>${jjwt.version}</version>
      	</dependency>
	  </dependencies>
  </dependencyManagement>
  
  <dependencies>
	<dependency>
	  <groupId>org.springframework.boot</groupId>
	  <artifactId>spring-boot-starter-test</artifactId>
	  <scope>test</scope>
	</dependency>
	<!-- <dependency>
	  <groupId>org.springframework.boot</groupId>
	  <artifactId>spring-boot-starter-log4j</artifactId>
	</dependency> -->
	<dependency>
	  <groupId>org.springframework.restdocs</groupId>
	  <artifactId>spring-restdocs-mockmvc</artifactId>
	</dependency>
	<dependency>
	  <groupId>commons-io</groupId>
	  <artifactId>commons-io</artifactId>
	  <version>${commons-io.version}</version>
	</dependency>
	<dependency>
      <groupId>javax.persistence</groupId>
      <artifactId>persistence-api</artifactId>
      <version>${persistence.version}</version>
	</dependency>
  </dependencies>
  
  <build>
	  <plugins>
		<!-- Compiler -->
		<plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-compiler-plugin</artifactId>
		  <configuration>
			<source>${java.source.version}</source>
			<target>${java.target.version}</target>
			<encoding>UTF-8</encoding>
		  </configuration>
		</plugin>
		<plugin>
		  <groupId>org.springframework.boot</groupId>
		  <artifactId>spring-boot-maven-plugin</artifactId>
		  <configuration>
		    <mainClass>${start-class}</mainClass>
		  </configuration>
		  <executions>
			<execution>
			  <id>spring boot</id>
			  <phase>package</phase>
			  <goals>
				<goal>repackage</goal>
			  </goals>
			</execution>
		  </executions>
		</plugin>
		<!-- Test -->
		<plugin>
		  <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <testFailureIgnore>true</testFailureIgnore>
          </configuration>
        </plugin>
		<!-- <plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-source-plugin</artifactId>
		  <executions>
			<execution>
			  <id>attach-sources</id>
			  <goals>
				<goal>jar</goal>
			  </goals>
			</execution>
		  </executions>
		</plugin> -->
	  </plugins>
  </build>
  
  <!-- mvn deploy的发布地址 -->
  <distributionManagement>
    <repository>
	  <id>nexus-releases</id>
      <name>Nexus Release Repository</name>
      <url>http://localhost:8081/nexus/content/repositories/releases</url>
	</repository>
	<snapshotRepository>
	  <id>nexus-snapshots</id>
      <name>Nexus Snapshot Repository</name>
      <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
	  <uniqueVersion>true</uniqueVersion>
	</snapshotRepository>
  </distributionManagement>
  <modules>
    <module>nosql</module>
    <module>jms</module>
    <module>rpc</module>
    <module>search</module>
    <module>algorithm</module>
    <module>scm</module>
  </modules>
</project>